# Mesh-smoothing-tool

./: README.md
Visualization/: CMakeLists.txt
Visualization/src/: CMakeLists.txt  main.cpp  myCamera.h  myGLWindow.cpp  myGLWindow.h  myRenderer.cpp  myRenderer.h  myShader.h  myShape.h
add/: FragmentShaderCodeFlat.glsl  FragmentShaderCodeNormalMap.glsl  VertexShaderCodeFlat.glsl  test.off
addDebug/: FragmentShaderCode.glsl  FragmentShaderCodeNormalMap.glsl  VertexShaderCode.glsl  VertexShaderCode2.glsl
doc/html/: annotated.html  class_global_smoothing_task.html  class_global_smoothing_task__coll__graph.map  class_global_smoothing_task__coll__graph.md5  class_global_smoothing_task__inherit__graph.map  class_global_smoothing_task__inherit__graph.md5  class_global_smoothing_task_a6eab613417cd3df62d396de00094d1d7_icgraph.map  class_global_smoothing_task_a6eab613417cd3df62d396de00094d1d7_icgraph.md5  class_global_smoothing_task_aa315c45e14d59e70d959bce6d3a59079_icgraph.map  class_global_smoothing_task_aa315c45e14d59e70d959bce6d3a59079_icgraph.md5  class_q_main_window.html  (+646 more)
src/: CMakeLists.txt  main.cpp  myDataManager.cpp  myDataManager.h  myGLWindow.cpp  myGLWindow.h  myMainWindow.cpp  myMainWindow.h  myRenderer.cpp  myShape.h  smoothing.cpp  smoothing.h  test.h
src/mesh/: denoising.cpp  denoising.h  iomesh.h  mesh.h  neighborhood.cpp  neighborhood.h  util.cpp  util.h
src/visualization/: FragmentShaderCode.glsl  VertexShaderCode.glsl  VertexShaderCode2.glsl  myCamera.cpp  myCamera.h  myRenderer.cpp  myRenderer.h  myShader.cpp  myShader.h  myShape.cpp  myShape.h
(+97 files in other folders)
